--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 									<h4> Solid State Physics</h4>
 								</a>
 								<p>
-									The study of rigid matter, or solids, through methods such as quantum mechanics, crystallography, electromagnetism, metallurgy and large-scale properties of solid materials is called solid state physics. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to solid state physics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									The study of rigid matter, or solids, through methods such as quantum mechanics, crystallography, electromagnetism, metallurgy and their properties is called solid state physics. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to solid state physics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 								</p>
 							</div>
 						</div>
