--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 									<h4> Quantum Mechanics</h4>
 								</a>
 								<p>
-									The branch of physics which deals with the physical properties of nature on an atomic scale with characteristics of both particles and waves is called quantum mechanics  In this section we will discuss how to interpret and visualize different physical phenomena and equations related to quantum mechanics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									The branch of physics which deals with the physical properties of nature of an atomic scale with their measurement, characteristics behavior like particles, waves, uncertainty and probability is called quantum mechanics. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to quantum mechanics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 								</p>
 							</div>
 						</div>
