--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 									<h4> Statistical and Thermal Physics </h4>
 								</a>
 								<p>
-									  The behavior of complex, many-particle systems with their distribution to understand quantitatively the ideas of temperature, heat flow, and irreversibility is called Statistical and Thermal Physics. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to our topic by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									  The behavior of complex, many particle systems and their distribution to understand the ideas of temperature, heat flow, and irreversibility is called Statistical and Thermal Physics. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to our topic by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
     
 								</p>
 							</div>
