--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 									<h4> Electrodynamics </h4>
 								</a>
 								<p>
-									 The branch of physics which deals with rapidly changing electric and magnetic fields with their dynamics due to different physical and field interaction is called electrodynamics. In this section we will discuss how to interpret and visualize different physical phenomena, complex system and equations related to electrodynamics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									 The branch of physics which deals with rapidly changing electric and magnetic fields with their dynamics due to different physical and field variation, interaction in physical world is called electrodynamics. In this section we will discuss how to interpret and visualize different physical phenomena, complex system and equations related to electrodynamics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 
     
 								</p>
