--- a/project/numerical-methods.html
+++ b/project/numerical-methods.html
@@ -53,7 +53,7 @@
 <br>
         <div class="container">
             <center>
-            <h2>Numerical Methods</h2>
+            <h2>Mathematical Physics & Numerical Methods</h2>
             <h3> NPS, Summer 2020 </h3>
             </center>
             <hr>
