--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 							<div class="single-feature">
 								<a href="./project/numerical-methods.html" target ="_blank" class="title d-flex flex-row">
 									<span class="lnr lnr-database"></span>
-									<h4> Mathematical Physics and Numerical Methods </h4>
+									<h4> Mathematical Physics & Numerical Methods </h4>
 								</a>
 								<p>
 									The study of algorithms that use numerical approximation for the problems of mathematical analysis is called Mathematical and Numerical Analysis.  So in this section we will discuss how to interpret and visualize different physical phenomena and equations related to numerical and mathematical methods by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
@@ -276,7 +276,7 @@
 							<div class="single-feature">
 								<a href="./project/statistical-and-thermal-physics.html" target ="_blank" class="title d-flex flex-row">
 									<span class="lnr lnr-diamond"></span>
-									<h4> Statistical and Thermal Physics </h4>
+									<h4> Statistical & Thermal Physics </h4>
 								</a>
 								<p>
 									  The behavior of complex, many particle systems and their distribution to understand the ideas of temperature, heat flow, and irreversibility is called Statistical and Thermal Physics. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to our topic by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
@@ -382,10 +382,10 @@
 							<div class="single-footer-widget">
 								<h6>Top Products</h6>
 								<ul class="footer-nav">
-									<li><a href="#">Become a NPS Member</a></li>
-									<li><a href="#">Join NPS Training</a></li>
+									<li><a href="https://nps.org.np/membership/">Become a NPS Member</a></li>
+									<li><a href="https://npshub.github.io/#">Join NPS Training</a></li>
 									<li><a href="#">Past Schools</a></li>
-									<li><a href="#"></a>Contact us</li>
+									<li><a href="https://nps.org.np/executive-committee/"></a>Contact us</li>
 								</ul>
 							</div>
 						</div>
