--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 									<li><a href="https://nps.org.np/membership/">Become a NPS Member</a></li>
 									<li><a href="https://npshub.github.io/#">Join NPS Training</a></li>
 									<li><a href="#">Past Schools</a></li>
-									<li><a href="https://nps.org.np/executive-committee/"></a>Contact us</li>
+									<li><a href="https://nps.org.np/executive-committee/">Contact us</a></li>
 								</ul>
 							</div>
 						</div>
