--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 								<h6>Top Products</h6>
 								<ul class="footer-nav">
 									<li><a href="https://nps.org.np/membership/">Become a NPS Member</a></li>
-									<li><a href="https://npshub.github.io/#">Join NPS Training</a></li>
+									<li><a href="http://tiny.cc/vnx2pz">Join NPS Training</a></li>
 									<li><a href="#">Past Schools</a></li>
 									<li><a href="https://nps.org.np/executive-committee/">Contact us</a></li>
 								</ul>
