--- a/index.html
+++ b/index.html
@@ -391,7 +391,11 @@
 						</div>
 						<div class="col-lg-6  col-md-12">
 							<div class="single-footer-widget newsletter">
-								<h6>Newsletter</h6>
+								<h6>
+									<ul class="footer-nav">
+									<a href="https://nps.org.np/category/workshop/"Newsletter</a>
+									</ul>
+								</h6>
 								<p>You can trust us. we only send promo offers, not a single spam.</p>
 								<div id="mc_embed_signup">
 									<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="form-inline">
