--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 									<h4> Mathematical Physics & Numerical Methods </h4>
 								</a>
 								<p>
-									The study of algorithms that use numerical approximation for the problems of mathematical analysis is called Mathematical and Numerical Analysis.  So in this section we will discuss how to interpret and visualize different physical phenomena and equations related to numerical and mathematical methods by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									In this section we will discuss how to interpret and visualize different physical phenomena and equations related to numerical and mathematical methods by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 								</p>
 							</div>
 						</div>
@@ -266,7 +266,7 @@
 									<h4> Electrodynamics </h4>
 								</a>
 								<p>
-									 The branch of physics which deals with rapidly changing electric and magnetic fields with their dynamics due to field variation and different interaction in the universe is called electrodynamics. In this section we will discuss how to interpret and visualize different physical phenomena, complex system and equations related to electrodynamics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									 In this section we will discuss how to interpret and visualize different physical phenomena, complex system and equations related to electrodynamics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 
     
 								</p>
@@ -279,7 +279,7 @@
 									<h4> Statistical & Thermal Physics </h4>
 								</a>
 								<p>
-									  The behavior of complex, many particle systems and their distribution to understand the ideas of temperature, heat flow, and irreversibility is called Statistical and Thermal Physics. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to our topic by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									   In this section we will discuss how to interpret and visualize different physical phenomena (e.g., the behavior of complex, many particle systems and their thermodynamics) based on undergraduate and graduate syllabus. Please click the link to see details.
     
 								</p>
 							</div>
@@ -295,7 +295,7 @@
 									<h4> Quantum Mechanics</h4>
 								</a>
 								<p>
-									The branch of physics which deals with the physical properties of nature of an atomic scale with their measurement, characteristics behavior like particles, waves, uncertainty and probability is called quantum mechanics. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to quantum mechanics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									In this section we will discuss how to interpret and visualize different physical phenomena and equations related to quantum mechanics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 								</p>
 							</div>
 						</div>
@@ -306,7 +306,7 @@
 									<h4> Classical Mechanics </h4>
 								</a>
 								<p>
-									The study of the motion of bodies in accordance with the general principles first enunciated by Sir Isaac Newton in his Philosophiae Naturalis Principia Mathematica (1687) is called classical mechanics. Please click the link to see detail. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to classical mechanics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									 In this section we will discuss how to interpret and visualize different physical phenomena and equations related to classical mechanics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 								</p>
 							</div>
 						</div>
@@ -317,7 +317,7 @@
 									<h4>Nuclear Physics</h4>
 								</a>
 								<p>
-									The field of physics that studies atomic nuclei, their constituents and interactions which includes their uses in nuclear power, medicine, industrial, agricultural, engineering, geology and archaeology is called Nuclear physics. In this section we will discuss about how to interpret and visualize different physical phenomena and equations related to nuclear and particle physics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									 In this section we will discuss about how to interpret and visualize different physical phenomena and equations related to nuclear and particle physics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 								</p>
 							</div>
 						</div>	
@@ -332,7 +332,7 @@
 									<h4> Solid State Physics</h4>
 								</a>
 								<p>
-									The study of rigid matter, or solids, through methods such as quantum mechanics, crystallography, electromagnetism, metallurgy and their properties is called solid state physics. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to solid state physics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									 In this section we will discuss how to interpret and visualize different physical phenomena and equations related to solid state physics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 								</p>
 							</div>
 						</div>
@@ -343,7 +343,7 @@
 									<h4> Econophysics </h4>
 								</a>
 								<p>
-									A heterodox interdisciplinary research field, applying theories and methods originally developed by physicists in order to solve problems in economics with uncertainty or stochastic processes and nonlinear dynamics is called econophysics. In this section we will discuss how to interpret and visualize different physical phenomena and equations by using advanced computational tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									 In this section we will discuss how to interpret and visualize different physical phenomena and equations by using advanced computational tools based on undergraduate and graduate syllabus. Please click the link to see details.
 								</p>
 							</div>
 						</div>
@@ -354,7 +354,7 @@
 									<h4> Quantum Computing</h4>
 								</a>
 								<p>
-									The use of quantum-mechanical phenomena such as superposition and entanglement to perform computation is called quantum computing. In this section we will discuss how to interpret and visualize complex system using quantum Computing with QisKit, and several data-visualization techniques different physical phenomena and system related to modern advancement in computation by using modern tools.  Please click the link to see details.
+									 In this section we will discuss how to interpret and visualize complex system using quantum Computing with QisKit, and several data-visualization techniques different physical phenomena and system related to modern advancement in computation by using modern tools.  Please click the link to see details.
 								</p>
 							</div>
 						</div>	
