--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 									<h4> Quantum Computing</h4>
 								</a>
 								<p>
-									 In this section we will discuss how to interpret and visualize complex system using quantum Computing with QisKit, and several data-visualization techniques different physical phenomena and system related to modern advancement in computation by using modern tools.  Please click the link to see details.
+									 In this section we will discuss how to interpret and visualize complex system using quantum Computing with QisKit, and several data-visualization techniques different physical phenomena and system related to modern advancement in computation by using modern tools.
 								</p>
 							</div>
 						</div>	
