--- a/training/document.html
+++ b/training/document.html
@@ -78,7 +78,7 @@
                             <span class="timeline-icon"></span>
                             <span class="year"> Introduction to Version Control </span>
                             <div class="timeline-content">
-                                <h3 class="title text-left"> setting up Git, Github and GitLab </h3>
+                                <h3 class="title text-left"> Setting up Git, Github and GitLab </h3>
                                 
                                 
                                 <p class="description" >
