--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
 				          <li class="menu-active"><a href="index.html">Home</a></li>
-				          <li><a href="https://nps.org.np/" target ="_blank">About Us</a></li>
+				          <li><a href="#about">About Us</a></li>
 				          <li><a href="#syllabus">Training</a></li>
 				          <li><a href="#projects">Projects</a></li>
 				            </ul>
@@ -63,16 +63,48 @@
 			    </div>
 			  </header><!-- #header -->
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
+<!-- start banner Area -->
+			<section class="banner-area">
+				<div class="container">
+					<div class="row fullscreen d-flex align-items-center justify-content-center">
+						<div class="banner-content col-lg-6 col-md-6">
+							<h1>
+								NPS <br>
+								School of Computing <br>			
+							</h1>
+							<p class="text-white text-uppercase">
+								Bringing the power of computing to you!
+							</p>
+							<a href="https://nps.org.np/" class="primary-btn header-btn text-uppercase">View Details</a>
+							<br>
+							<a class="btn btn-social-icon btn-facebook" style="color:darkblue" href="https://www.facebook.com/nps.org.np/" target ="_blank" >
+    							<span class="fa fa-facebook" style="font-size: 30px;"></span>
+ 						   </a>
+ 						   <a class="btn btn-social-icon btn-github" style="color:black" href="https://www.github.com/npshub" target ="_blank">
+    							<span class="fa fa-github" style="font-size: 30px;"> </span>
+ 						   </a>
+ 						   <a class="btn btn-social-icon btn-slack" style="color:red" href="https://join.slack.com" target="_blank">
+    							<span class="fa fa-slack" style="font-size: 30px;"> </span>
+ 						   </a>
+
+
+						</div>
+						<div class="banner-img col-lg-6 col-md-6">
+							<img class="img-fluid" src="img/banner-img.png" alt="">
+						</div>												
+					</div>
+				</div>
+			</section>
+			<!-- End banner Area -->
+
+<br>
+<br>
+<br>
+<br>
 
 			  <!-- Start home-about Area -->
-			<section class="home-about-area", id = "home">
+			<section class="home-about-area", id = "about">
 				<div class="container-fluid">
 					<div class="row align-items-center">
 						<div class="col-lg-6 home-about-left no-padding">
@@ -82,6 +114,7 @@
 						</div>
 						<div class="col-lg-6 home-about-right no-padding">
 							<h3> Nepal Physical Society <br> School of Computing</h3>
+							<br>
 							<h5>
 								Educational transformation in modern days requires engagement of multidisciplinary people.
 							</h5>
