--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							<p class="text-white text-uppercase">
 								Bringing the power of computing to you!
 							</p>
-							<a href="https://nps.org.np/" class="primary-btn header-btn text-uppercase">View Details</a>
+							<a href="https://nps.org.np/" class="primary-btn header-btn text-uppercase">Learn More about NPS</a>
 							<br>
 							<a class="btn btn-social-icon btn-facebook" style="color:darkblue" href="https://www.facebook.com/nps.org.np/" target ="_blank" >
     							<span class="fa fa-facebook" style="font-size: 30px;"></span>
