--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
  						   <a class="btn btn-social-icon btn-github" style="color:black" href="https://www.github.com/npshub" target ="_blank">
     							<span class="fa fa-github" style="font-size: 30px;"> </span>
  						   </a>
- 						   <a class="btn btn-social-icon btn-slack" style="color:red" href="https://join.slack.com" target="_blank">
+ 						   <a class="btn btn-social-icon btn-slack" style="color:red" href="https://npsschoolofcomputing.slack.com/" target="_blank">
     							<span class="fa fa-slack" style="font-size: 30px;"> </span>
  						   </a>
 
