--- a/training/python.html
+++ b/training/python.html
@@ -80,7 +80,7 @@
                                 </ul>
                                 </p>
 
-                                <center> <a href="https://www.teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://www.teachme.codes/python-docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
 
                             </div>
                         </div>
@@ -101,7 +101,7 @@
                                     <li class="text-left"> Implementation of function and class to create (1) electric potential of <b>lattice of charges</b> (2) <b>random walk</b> in 1D and 2D (3) <b>diffusion</b> in 2D.</li>
                                 </ul>
                                 </p>
-                                <center> <a href="https://www.teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://www.teachme.codes/python-docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
 
@@ -120,7 +120,7 @@
                                     <li> Exploration of basic functionalities in <b>Algebra</b> (e.g., vector and matrix manipulation), <b>statistics</b> (e.g.,central tendency, probability.</li>
                                 </ul>
                                 </p>
-                                <center> <a href="https://www.teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://www.teachme.codes/numpy-docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
 
@@ -141,7 +141,7 @@
                                         <li class="text-left"> Implementation of <b>groupby and lambda</b> function methods to wrangling data in Dataframe.</li>
                                     </li>
                                 </p>
-                                <center> <a href="https://www.teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://www.teachme.codes/pandas-docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
 
@@ -162,7 +162,7 @@
                                     <li> Performing <b>Monte Carlo Simulation</b> of lattice system in Condensed Matter Physics (e.g., <em> Ising Model</em>).</li>
                                 </ul>
                                 </p>
-                                <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://teachme.codes/scipy-tutorials" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
 
