--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 							<p>
 								We are working in the separate focused group to design various projects in the Physics Classroom  (e.g.,  Numerical Methods, Classical Mechanics, Statistical Physics, Quantum Physics, Electrodynamics and Condensed Matter Physics) to innovative Physics topics (e.g., Quantum Computing, Computational Neuro physics, Computational Genomics, Econophysics, Machine Learning and AI). 
 							</p>
-							<a class="primary-btn" href="http://tiny.cc/vnx2pz">Get Started Now</a>
+							<a class="primary-btn" href="http://tiny.cc/961zsz">Get Started Now</a>
 						</div>
 
 						
